<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".authentication.settings.SettingsFragment">

    <TextView
        android:id="@+id/textView_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_language"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/language"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCompat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/dark_mode"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_language" />

    <TextView
        android:id="@+id/textView_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:drawableEnd="@drawable/user"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/profile"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCompat" />

    <TextView
        android:id="@+id/textView_signOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sign_out"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/sign_out"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>