<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_12sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView_clinicInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/clinic_information"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_clinicInformation" />

        <TextView
            android:id="@+id/textView_addressValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Qasr El nil,Cairo Governorate,Egypt"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView_address"
            app:layout_constraintTop_toTopOf="@id/textView_address" />

        <TextView
            android:id="@+id/textView_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/textView_address"
            app:layout_constraintTop_toBottomOf="@id/textView_address" />

        <TextView
            android:id="@+id/textView_phoneValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01240502397"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView_phone"
            app:layout_constraintTop_toTopOf="@id/textView_phone" />

        <TextView
            android:id="@+id/textView_examinationPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examination_price"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/textView_phone"
            app:layout_constraintTop_toBottomOf="@id/textView_phone" />

        <TextView
            android:id="@+id/textView_examinationPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="150"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView_examinationPrice"
            app:layout_constraintTop_toTopOf="@id/textView_examinationPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LE"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView_examinationPriceValue"
            app:layout_constraintTop_toTopOf="@id/textView_examinationPriceValue"/>

        <TextView
            android:id="@+id/textView_followUpPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_up_price"
            android:layout_marginTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/textView_examinationPrice"
            app:layout_constraintTop_toBottomOf="@id/textView_examinationPrice" />

        <TextView
            android:id="@+id/textView_followUpPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="75"
            android:paddingBottom="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView_followUpPrice"
            app:layout_constraintTop_toTopOf="@id/textView_followUpPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LE"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintStart_toEndOf="@+id/textView_followUpPriceValue"
            app:layout_constraintTop_toTopOf="@id/textView_followUpPrice"/>



    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>