<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="@dimen/_20sdp"
    tools:context=".authentication.completeProfile.PatientProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_completProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/complete_your_profile"
            style="@style/CustomTextViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/light_gray"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_profile"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_20sdp"
            app:shapeAppearanceOverlay="@style/circular"
            app:layout_constraintTop_toBottomOf="@+id/textView_completProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="81dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
            app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
            android:src="@drawable/ic_camera"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:tint="@color/white"
            android:backgroundTint="@color/dark_blue"
            android:clickable="true"
            android:contentDescription="TODO" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:endIconMode="clear_text"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/hint_phone_number"
            app:endIconMode="clear_text"
            app:prefixText="+20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_gender"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phone">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Male"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_completeProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/complete_profile"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_gender" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="348dp"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>